cluster/apps/default/vaultwarden/service.yaml
---
# Source: vaultwarden/templates/common.yaml
apiVersion: v1
kind: Service
metadata:
  name: vaultwarden
  namespace: default
  labels:
    app.kubernetes.io/instance: vaultwarden
    app.kubernetes.io/name: vaultwarden
    app.kubernetes.io/version: 1.25.2
  annotations:
spec:
  type: ClusterIP
  ports:
  - port: 80
    targetPort: http
    protocol: TCP
    name: http
  - port: 3012
    targetPort: websocket
    protocol: TCP
    name: websocket
  selector:
    app.kubernetes.io/name: vaultwarden
    app.kubernetes.io/instance: vaultwarden
